# diwo_label_1_1

./: .gitignore  CMakeLists.txt  README.rst  diwo_label_1_1.sln  diwo_label_1_1.vgdbproj  prj.conf
boards/arm/: _diwo_label_ble_nfc_1_0.1overlay  diwo_label_ble_nfc_1_0.overlay
boards/arm/diwo_label_ble_1_1/: Kconfig.board  Kconfig.defconfig  diwo_label_ble_1_1.dts  diwo_label_ble_1_1.yaml  diwo_label_ble_1_1_defconfig
docs/: pkt.txt  temp1.pcapng
lis2dh/: lis2dh.c  lis2dh.h  lis2dh_trigger.c
src/: acc.h  acc_lis2_de.c  acc_lis2_dh.c  battery.c  bsp.c  bsp.h  button.c  button.h  diwo_label.h  led.c  led.h  main.c  main.c.bak  main.h  nfc.c  nfc.h  peripheral.c  power.c  power.h  service.c  service.h  setting.c  setting.h  settings.c  settings.h  wdt.c  wdt.c.bak  wdt.h
